Add y commit en el mismo paso

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejemplo para git</title>
+    <link rel="stylesheet" href="css/misestilos.css">
 </head>
 <body>
     <h1>HOLA MUNDO!</h1>
+    <p>Texto añadido junto con la vinculacion de los estilos</p>
     
 </body>
 </html>
