guardo desde vsc

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
     <h1>HOLA MUNDO!</h1>
     <p>Texto añadido junto con la vinculacion de los estilos</p>
+
+    <ul>
+        <li>uno</li>
+    </ul>
     
 </body>
 </html>
