modificando en remoto

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <h3>Pruebas hechas desde github</h3>
 
-    <h5>Y ademas le añado este texto pequeño</h5>
+    <h5>Y ademas le añado este texto pequeño y otro mas</h5>
 
    
     
