--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <h3>Pruebas hechas desde github</h3>
 
     <h5>Y ademas le añado este texto pequeño y otro mas</h5>
+    <br>
+    <p>aqui abro VSC</p>
 
    
     
