--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <h5>Y ademas le añado este texto pequeño y otro mas</h5>
     <br>
     <p>aqui abro VSC</p>
+    <dialog>hola </dialog>
 
    
     
